# client

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  README_ru.md
.github/workflows/: release.yml
src/: app.rs  engine.rs  main.rs  ui.rs  updater.rs
