[package]
name = "vvcall"
version = "0.7.0-beta.1"
edition = "2024"
build = "build.rs"

[dependencies]
cpal = "0.15.2"
opus = "0.3.0"
anyhow = "1.0"
eframe = { version = "0.27", features = ["persistence", "glow"] }
serde = { version = "1.0", features = ["derive"] }
tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.0"
self_update = { version = "0.42", features = ["archive-zip"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0"
ureq = { version = "2.9", features = ["json", "tls"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
resvg = "0.41.0"
tiny-skia = "0.11"
dark-light = "1.1"
ringbuf = "0.4.7"
crossbeam-channel = "0.5.11"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
